fix: fixed alignment of the repo name

--- a/github-wide.user.css
+++ b/github-wide.user.css
@@ -29,10 +29,6 @@
   .reponav {
     width: 100%;
   }
-  .pagehead {
-    padding-right: 16px !important;
-    padding-left: 16px !important;
-  }
   .container {
     width: 100%;
     max-width: 100% !important;
